selector-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-needs-ssd
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    disktype: ssd
