test-cm-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-env-pod
spec:
  containers:
  - name: test-env
    image: nginx
