statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxss
  labels:
    app: nginxss
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginxss
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web # must match service .spec.ports.name
spec:
  selector:
    matchLabels:
      app: nginxss # has to match .spec.template.metadata.labels
  serviceName: "nginxss"
  replicas: 3
  template:
    metadata:
      labels:
        app: nginxss # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www # must match name of volume mount
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
